--- a/src/blog/202309/building-a-static-blog-with-next-js-and-mdx.mdx
+++ b/src/blog/202309/building-a-static-blog-with-next-js-and-mdx.mdx
@@ -279,7 +279,7 @@ And voila! You should have a working counter component in your blog post.
 
 ### Adding Syntax Highlighting
 
-Congratulations! You've completed setup for your blog.  However, our embedded code blocks feel a bit bland and may be hard to read without some proper syntax highlighting.   Luckily there exists a plugin, [rehype-highlght](), that can help us with that.  Let's install it and add some necessary elements needed to make it work.
+Congratulations! You've completed setup for your blog.  However, our embedded code blocks feel a bit bland and may be hard to read without some proper syntax highlighting.   Luckily there exists a plugin, [rehype-highlght](https://github.com/rehypejs/rehype-highlight), that can help us with that.  Let's install it and add some necessary elements needed to make it work.
 
 ```bash
 pnpm add rehype-highlight
